--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "homepage": "http://Luiggi370z.github.io/react-todo",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^3.15.1",
+    "@blueprintjs/core": "^3.41.0",
     "@blueprintjs/datetime": "^3.9.0",
+    "@blueprintjs/docs-theme": "^3.9.8",
+    "blueprint-js": "^1.3.2",
     "date-fns": "^1.30.1",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-redux": "^7.0.3",
     "react-scripts": "3.0.1",
     "react-transition-group": "^4.1.0",
     "redux": "^4.0.1",
-    "reselect": "^4.0.0"
+    "reselect": "^4.0.0",
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
